--- a/Mic.Web/Views/Bon/BonIndex.cshtml
+++ b/Mic.Web/Views/Bon/BonIndex.cshtml
@@ -14,7 +14,7 @@
             <div class="col-6">
             </div>
             <div class="col-6 text-end">
-                <a class="btn btn-outline-primary"><i class="bi bi-plus-square"></i> Create New Coupon</a>
+                <a asp-controller="Bon" asp-action="BonCreate" class="btn btn-outline-primary"><i class="bi bi-plus-square"></i> Create New Coupon</a>
 
             </div>
         </div>
