--- a/Mic.Web/Views/Bon/BonIndex.cshtml
+++ b/Mic.Web/Views/Bon/BonIndex.cshtml
@@ -42,7 +42,7 @@
                     </td>
                     
                     <td>
-                        <a class="btn btn-danger">
+                        <a asp-action="BonDelete" asp-route-bonId="@item.Id" class="btn btn-danger">
                             <i class="bi bi-trash"></i>
                         </a>
                     </td>
