--- a/Mic.Web/Views/Shared/_Layout.cshtml
+++ b/Mic.Web/Views/Shared/_Layout.cshtml
@@ -31,6 +31,14 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Bon" asp-action="BonIndex">Bon management</a>
                         </li>
                     </ul>
+                    <ul class="navbar-nav ">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Auth" asp-action="Register">Register</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Auth" asp-action="Login">Login</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
