--- a/Mic.Web/Views/_ViewImports.cshtml
+++ b/Mic.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Mic.Web
 @using Mic.Web.Models
 @using BonAPI.Models.DTOs
+@using Mic.Web.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
